tests/solidity-semantic-tests/out/errors/require_inherited_error/C.clear.teal
#pragma version 10
#pragma typetrack false

// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_inherited_error.sol.C.clear_state_program() -> uint64:
main:
    pushint 1
    return
